--- a/styles.scss
+++ b/styles.scss
@@ -1,19 +1,122 @@
 html {
   height: 100%;
+  font-family: "Poppins", sans-serif;
+}
 
-  body {
-    height: 100%;
-    height: 100%;
-    width: 100%;
-    margin: 0;
+body {
+  height: 100%;
+  height: 100%;
+  width: 100%;
+  margin: 0;
 
-    background-attachment: fixed;
-    background-repeat: no-repeat;
-    background: rgb(212, 91, 255);
-    background: linear-gradient(
-      45deg,
-      rgba(212, 91, 255, 1) 41%,
-      rgba(0, 212, 255, 1) 100%
-    );
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  background: rgb(212, 91, 255);
+  background: linear-gradient(
+    45deg,
+    rgba(212, 91, 255, 1) 41%,
+    rgba(0, 212, 255, 1) 100%
+  );
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  .clock {
+    height: 400px;
+    width: 400px;
+    background-color: white;
+    border-radius: 50%;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    position: relative;
+
+    .center-dot {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      height: 15px;
+      width: 15px;
+      background-color: black;
+      border-radius: 50%;
+      transform: translateX(-50%) translateY(-50%);
+      box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+      z-index: 1;
+    }
+
+    .hand {
+      position: absolute;
+      border-top-left-radius: 50%;
+      border-top-right-radius: 50%;
+      bottom: 50%;
+      left: 50%;
+      background-color: black;
+      transform-origin: bottom;
+      transform: translateX(-50%) rotate(calc(var(--rotation) * 1deg));
+      box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    }
+
+    .hours-hand {
+      --rotation: 0;
+      width: 10px;
+      height: 30%;
+    }
+
+    .minutes-hand {
+      --rotation: 30;
+      position: absolute;
+      width: 10px;
+      height: 40%;
+    }
+
+    .seconds-hand {
+      --rotation: 60;
+      position: absolute;
+      width: 2px;
+      height: 45%;
+      background-color: red;
+    }
+
+    .number {
+      --rotation: 0;
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      text-align: center;
+      transform: rotate(var(--rotation));
+      font-size: 1.5rem;
+    }
+    .number1 {
+      --rotation: 30deg;
+    }
+    .number2 {
+      --rotation: 60deg;
+    }
+    .number3 {
+      --rotation: 90deg;
+    }
+    .number4 {
+      --rotation: 120deg;
+    }
+    .number5 {
+      --rotation: 150deg;
+    }
+    .number6 {
+      --rotation: 180deg;
+    }
+    .number7 {
+      --rotation: 210deg;
+    }
+    .number8 {
+      --rotation: 240deg;
+    }
+    .number9 {
+      --rotation: 270deg;
+    }
+    .number10 {
+      --rotation: 300deg;
+    }
+    .number11 {
+      --rotation: 330deg;
+    }
   }
 }
